# manta-simulator

./: README.md
manta_control/manta_thruster_manager/config/: TAM.yaml
manta_control/manta_thruster_manager/scripts/: thruster_allocator.py
manta_description/: CMakeLists.txt  package.xml
manta_description/launch/: upload.launch
manta_description/meshes/: base.stl  t200_propccw.dae  t200_propcw.dae
manta_description/robots/: default.xacro
manta_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
manta_gazebo/: CMakeLists.txt  package.xml
manta_gazebo/launch/: simulation.launch
